# lemke

./: pyproject.toml  requirements.txt
examples/: lcp
src/lemke/: bimatrix.py  lemke.py  randomstart.py  utils.py
