[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lemke"
version = "0.0.1"
dependencies = [
    "numpy>=2.2,<2.3",
    "matplotlib>=3.10,<3.11"
]
requires-python = ">=3.9"
authors = [
    {name = "Bernhard von Stengel", email = "b.von-stengel@lse.ac.uk"}
]
description = "A pure Python implementation of Lemke's algorithm"
readme = "README.md"
license = {text = "GPL-3.0-only"}
keywords = ["lemke"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Repository = "https://github.com/gambitproject/lemke.git"

[project.scripts]
lemke = "lemke.lemke:main"
bimatrix = "lemke.bimatrix:main"

[tool.setuptools.packages.find]
where = ["src"]
